--- a/begleitdokumentation.ipynb
+++ b/begleitdokumentation.ipynb
@@ -128,6 +128,54 @@
       "* Structure and Interpretation of Computer Programs (Suessman, ...)\n",
       "* Peter Norvigs lis.py"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Notes\n",
+      "\n",
+      "#### \u00dcbungen\n",
+      "\n",
+      "* RPN (auf Papier)\n",
+      "* Tokenize (auf Papier)\n",
+      "* Wettbewerb: Tokenize programmieren und testen (Wer braucht am wenigsten Zeilen?displ)\n",
+      "* Atoms parsing (code)\n",
+      "* Iterative Parsing (Paper programming mit K\u00e4rtchen)\n",
+      "   - Expliziter Stack\n",
+      "* Iterative Parsing programmieren\n",
+      "* Zusatz\u00fcbung: Rekursive Version mit implizitem Stack (Paperprogramming)\n",
+      "* Rekursive Version ausprogrammieren\n",
+      "* SyntaxBaum zeichnen\n",
+      "* Eval von Hand\n",
+      "* Reihenfolge (spielt es eine Rolle? Nein!)\n",
+      "* Operationen definieren (code)\n",
+      "* \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "#### Referenzen\n",
+      "\n",
+      "* Yegge\n",
+      "* McCarty's seminal paper\n",
+      "* The Art of Interpreters\n",
+      "* Histoy of Lisp\n",
+      "\n",
+      "\n",
+      "#### Blabla\n",
+      "\n",
+      "* Two models of computation (C and Lisp / Turing Machine vs . Lambda Calculus)\n",
+      "  - The world of programming ist gettingh lispier (Python, Ruby, JavaScript, Clojure)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
